2019-1/231/users/4208/executions/1719_2504.log
== SUBMITION (2019-05-09 19:13:47) 
-- CODE:
a=int(input("Quantidade inicial de cópias do vírus no sangue de Micaleteia."))
b=int(input("Quantidade inicial de leucócitos no sangue."))
perca=float(input("Percentual de multiplicação diária do vírus."))
percb=float(input("Percentual de multiplicação diária dos leucócitos."))
ano=0
while(b!=2*a):
	a=a+(perca/100)*a
	b=b+(percb/100)*b
	ano=ano+1
	
	
	if(b=2*a):
		print(ano)
-- EXECUTION TIME:
0.137796
-- ERROR:
  File "/home/codebench/codes/1719/2504/main.py", line 12
    if(b=2*a):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:15:07) 
-- CODE:
a=int(input("Quantidade inicial de cópias do vírus no sangue de Micaleteia."))
b=int(input("Quantidade inicial de leucócitos no sangue."))
perca=int(input("Percentual de multiplicação diária do vírus."))
percb=int(input("Percentual de multiplicação diária dos leucócitos."))
ano=0
while(b!=2*a):
	a=a+(perca/100)*a
	b=b+(percb/100)*b
	ano=ano+1
	
	
	if(b=2*a):
		print(ano)
-- EXECUTION TIME:
0.152883
-- ERROR:
  File "/home/codebench/codes/1719/2504/main.py", line 12
    if(b=2*a):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:15:28) 
-- CODE:
a=int(input("Quantidade inicial de cópias do vírus no sangue de Micaleteia."))
b=int(input("Quantidade inicial de leucócitos no sangue."))
perca=int(input("Percentual de multiplicação diária do vírus."))
percb=int(input("Percentual de multiplicação diária dos leucócitos."))
ano=0
while(b<a):
	a=a+(perca/100)*a
	b=b+(percb/100)*b
	ano=ano+1
	
	
	if(b=2*a):
		print(ano)
-- ERROR:
File "XXXX", line 12
    if(b=2*a):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:15:43) 
-- CODE:
a=int(input("Quantidade inicial de cópias do vírus no sangue de Micaleteia."))
b=int(input("Quantidade inicial de leucócitos no sangue."))
perca=int(input("Percentual de multiplicação diária do vírus."))
percb=int(input("Percentual de multiplicação diária dos leucócitos."))
ano=0
while(b>a):
	a=a+(perca/100)*a
	b=b+(percb/100)*b
	ano=ano+1
	
	
	if(b=2*a):
		print(ano)
-- EXECUTION TIME:
0.134896
-- ERROR:
  File "/home/codebench/codes/1719/2504/main.py", line 12
    if(b=2*a):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:16:43) 
-- CODE:
a=int(input("Quantidade inicial de cópias do vírus no sangue de Micaleteia."))
b=int(input("Quantidade inicial de leucócitos no sangue."))
perca=int(input("Percentual de multiplicação diária do vírus."))
percb=int(input("Percentual de multiplicação diária dos leucócitos."))
dia=0
while(b>a):
	a=a+(perca/100)*a
	b=b+(percb/100)*b
	dia=ano+1
	
	
	if(b=2*a):
		print(dia)
-- EXECUTION TIME:
0.144763
-- ERROR:
  File "/home/codebench/codes/1719/2504/main.py", line 12
    if(b=2*a):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:16:46) 
-- CODE:
a=int(input("Quantidade inicial de cópias do vírus no sangue de Micaleteia."))
b=int(input("Quantidade inicial de leucócitos no sangue."))
perca=int(input("Percentual de multiplicação diária do vírus."))
percb=int(input("Percentual de multiplicação diária dos leucócitos."))
dia=0
while(b>a):
	a=a+(perca/100)*a
	b=b+(percb/100)*b
	dia=ano+1
	
	
	if(b=2*a):
		print(dia)
-- ERROR:
File "XXXX", line 12
    if(b=2*a):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:17:16) 
-- CODE:
a=int(input("Quantidade inicial de cópias do vírus no sangue de Micaleteia."))
b=int(input("Quantidade inicial de leucócitos no sangue."))
perca=int(input("Percentual de multiplicação diária do vírus."))
percb=int(input("Percentual de multiplicação diária dos leucócitos."))
dia=0
while(b>a):
	a=a+(perca/100)*a
	b=b+(percb/100)*b
	dia=ano+1
	
	
	if(b=+2*a):
		print(dia)
-- ERROR:
File "XXXX", line 12
    if(b=+2*a):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:17:22) 
-- CODE:
a=int(input("Quantidade inicial de cópias do vírus no sangue de Micaleteia."))
b=int(input("Quantidade inicial de leucócitos no sangue."))
perca=int(input("Percentual de multiplicação diária do vírus."))
percb=int(input("Percentual de multiplicação diária dos leucócitos."))
dia=0
while(b>a):
	a=a+(perca/100)*a
	b=b+(percb/100)*b
	dia=ano+1
	
	
	if(b==2*a):
		print(dia)
-- ERROR:
File "XXXX", line 12
    if(b=+2*a):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:17:46) 
-- CODE:
a=int(input("Quantidade inicial de cópias do vírus no sangue de Micaleteia."))
b=int(input("Quantidade inicial de leucócitos no sangue."))
perca=int(input("Percentual de multiplicação diária do vírus."))
percb=int(input("Percentual de multiplicação diária dos leucócitos."))
dia=0
while(b>a):
	a=a+(perca/100)*a
	b=b+(percb/100)*b
	dia=ano+1
	
	
	if(b==2*a):
		print(dia)
-- ERROR:
File "XXXX", line 12
    if(b=+2*a):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:18:26) 
-- CODE:
a=int(input("Quantidade inicial de cópias do virus no sangue de Micaleteia."))
b=int(input("Quantidade inicial de leucocitos no sangue."))
perca=int(input("Percentual de multiplicao diaria do virus."))
percb=int(input("Percentual de multiplicacao diaria dos leucocitos."))
dia=0
while(b>a):
	a=a+(perca/100)*a
	b=b+(percb/100)*b
	dia=ano+1
	
	
	if(b==2*a):
		print(dia)
-- EXECUTION TIME:
0.164294
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:

-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:

-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:18:38) 
-- CODE:
a=int(input("Quantidade inicial de cópias do virus no sangue de Micaleteia."))
b=int(input("Quantidade inicial de leucocitos no sangue."))
perca=int(input("Percentual de multiplicao diaria do virus."))
percb=int(input("Percentual de multiplicacao diaria dos leucocitos."))
dia=0
while(b>a):
	a=a+(perca/100)*a
	b=b+(percb/100)*b
	dia=dia+1
	
	
	if(b==2*a):
		print(dia)
-- EXECUTION TIME:
0.204418
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:

-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:

-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:21:35) 
-- CODE:
a=int(input("Quantidade inicial de cópias do virus no sangue de Micaleteia."))
b=int(input("Quantidade inicial de leucocitos no sangue."))
perca=int(input("Percentual de multiplicao diaria do virus."))
percb=int(input("Percentual de multiplicacao diaria dos leucocitos."))
dia=0
while(b!=2*a):
	a=a+(perca/100)*a
	b=b+(percb/100)*b
	dia=dia+1
	
	
	if(b==2*a):
		print(dia)
-- EXECUTION TIME:
0.20185
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1719/2504/main.py", line 1, in <module>
    a=int(input("Quantidade inicial de c\xf3pias do virus no sangue de Micaleteia."))
UnicodeEncodeError: 'ascii' codec can't encode character '\xf3' in position 23: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:29:01) 
-- CODE:
a=int(input("Quantidade inicial de cópias do virus no sangue de Micaleteia."))
b=int(input("Quantidade inicial de leucocitos no sangue."))
perca=int(input("Percentual de multiplicao diaria do virus."))
percb=int(input("Percentual de multiplicacao diaria dos leucocitos."))
dia=0
while(b<2*a):
	a=a+(perca/100)*a
	b=b+(percb/100)*b
	dia=dia+1
	
	
	if(b==2*a):
		print(dia)
-- ERROR:
File "XXXX", line 12
    if(b=+2*a):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:29:23) 
-- CODE:
a=int(input())
b=int(input())
perca=int(input("Percentual de multiplicao diaria do virus."))
percb=int(input("Percentual de multiplicacao diaria dos leucocitos."))
dia=0
while(b<2*a):
	a=a+(perca/100)*a
	b=b+(percb/100)*b
	dia=dia+1
	
	
	if(b==2*a):
		print(dia)
-- ERROR:
File "XXXX", line 12
    if(b=+2*a):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:29:41) 
-- CODE:
a=int(input())
b=int(input())
perca=int(input("Percentual de multiplicao diaria do virus."))
percb=int(input("Percentual de multiplicacao diaria dos leucocitos."))
dia=0
while(b<2*a):
	a=a+(perca/100)*a
	b=b+(percb/100)*b
	dia=dia+1
	
	
	if(b==2*a):
		print(dia)
-- EXECUTION TIME:
0.2888
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:

-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:

-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:29:49) 
-- CODE:
a=int(input())
b=int(input())
perca=int(input("Percentual de multiplicao diaria do virus."))
percb=int(input("Percentual de multiplicacao diaria dos leucocitos."))
dia=0
while(b<2*a):
	a=a+(perca/100)*a
	b=b+(percb/100)*b
	dia=dia+1

		print(dia)
-- EXECUTION TIME:
0.290911
-- ERROR:
  File "/home/codebench/codes/1719/2504/main.py", line 11
    print(dia)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:29:52) 
-- CODE:
a=int(input())
b=int(input())
perca=int(input("Percentual de multiplicao diaria do virus."))
percb=int(input("Percentual de multiplicacao diaria dos leucocitos."))
dia=0
while(b<2*a):
	a=a+(perca/100)*a
	b=b+(percb/100)*b
	dia=dia+1

		print(dia)
-- EXECUTION TIME:
0.258427
-- ERROR:
  File "/home/codebench/codes/1719/2504/main.py", line 11
    print(dia)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:31:05) 
-- CODE:
a=int(input("Quantidade inicial de cópias do virus no sangue de Micaleteia."))
b=int(input("Quantidade inicial de leucocitos no sangue."))
perca=int(input("Percentual de multiplicao diaria do virus."))
percb=int(input("Percentual de multiplicacao diaria dos leucocitos."))
dia=0
while(a>0 and b>0):
	a=a+(perca/100)*a
	b=b+(percb/100)*b
	dia=dia+1
	
	
	if(b==2*a):
		print(dia)
-- EXECUTION TIME:
418.379
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:31:49) 
-- CODE:
a=int(input())
b=int(input())
perca=int(input("Percentual de multiplicao diaria do virus."))
percb=int(input("Percentual de multiplicacao diaria dos leucocitos."))
dia=0
while(b<2*a):
	a=a+perca*a
	b=b+percb*b
	dia=dia+1

		print(dia)
-- EXECUTION TIME:
0.164465
-- ERROR:
  File "/home/codebench/codes/1719/2504/main.py", line 11
    print(dia)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:33:13) 
-- CODE:
v=int(input())
l=int(input())
pv=int(input("Percentual de multiplicao diaria do virus."))/100
pl=int(input("Percentual de multiplicacao diaria dos leucocitos."))/100
dia=0
while(b<2*a):
	a=a+perca*a
	b=b+percb*b
	dia=dia+1

		print(dia)
-- EXECUTION TIME:
0.186279
-- ERROR:
  File "/home/codebench/codes/1719/2504/main.py", line 11
    print(dia)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:33:25) 
-- CODE:
v=int(input())
l=int(input())
pv=int(input("Percentual de multiplicao diaria do virus."))//100
pl=int(input("Percentual de multiplicacao diaria dos leucocitos."))//100
dia=0
while(b<2*a):
	a=a+perca*a
	b=b+percb*b
	dia=dia+1

		print(dia)
-- EXECUTION TIME:
0.279402
-- ERROR:
  File "/home/codebench/codes/1719/2504/main.py", line 11
    print(dia)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:33:47) 
-- CODE:
v=int(input())
l=int(input())
pv=int(input("Percentual de multiplicao diaria do virus."))//100
pl=int(input("Percentual de multiplicacao diaria dos leucocitos."))//100
dia=0
while(b<2*a):
	a=a+perca*a
	b=b+percb*b
	dia=dia+1

	print(dia)
-- EXECUTION TIME:
0.119397
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1719/2504/main.py", line 6, in <module>
    while(b<2*a):
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:35:08) 
-- CODE:
v=int(input())
l=int(input())
pv=int(input("Percentual de multiplicao diaria do virus."))//100
pl=int(input("Percentual de multiplicacao diaria dos leucocitos."))//100
dia=0
while(l<2*v):
	l=l+pl*l
	v=v+pv*v
	dia=dia+1

	print(dia)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:37:23) 
-- CODE:
v=int(input())
l=int(input())
pv=int(input("Percentual de multiplicao diaria do virus."))//100
pl=int(input("Percentual de multiplicacao diaria dos leucocitos."))//100
dia=0
while(l<2*v):
	l=l+pl*l
	v=v+pv*v
	dia=dia+1

	if(l>2*v):
		print(dia)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:38:10) 
-- CODE:
v=int(input())
l=int(input())
pv=int(input("Percentual de multiplicao diaria do virus."))/100
pl=int(input("Percentual de multiplicacao diaria dos leucocitos."))/100
dia=0
while(l<2*v):
	l=l+pl*l
	v=v+pv*v
	dia=dia+1

	if(l>2*v):
		print(dia)
-- EXECUTION TIME:
0.627632
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:48:05) 
-- CODE:
v=int(input())
l=int(input())
pv=int(input("Percentual de multiplicao diaria do virus."))//100
pl=int(input("Percentual de multiplicacao diaria dos leucocitos."))//100
dia=0
while(l<2*v):
	l=l+pl*l
	v=v+pv*v
	dia=dia+1

	print(dia)
-- EXECUTION TIME:
777.66
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 12:55:43) 
-- CODE:
v=int(input())
l=int(input())
pv=int(input("Percentual de multiplicao diaria do virus."))/100
pl=int(input("Percentual de multiplicacao diaria dos leucocitos."))/100
dia=0
while(l<2*v):
	l=l+pl*l
	v=v+pv*v
	dia=dia+1

print(dia)
-- EXECUTION TIME:
0.22602
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:47:01) 
-- CODE:
v=int(input())
l=int(input())
pv=int(input("Percentual de multiplicao diaria do virus."))/100
pl=int(input("Percentual de multiplicacao diaria dos leucocitos."))/100
dia=0
while(l<2*v):
	l=l+pl*l
	v=v+pv*v
	dia=dia+1

print(dia)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
